@@ -1,7 +1,5 @@
 TODO:
 
-- wildcard
-
 - forwardmsg = "never|detached|attached|always"
 
 - option to reduce qlog size when low on memory (it's not going to work out)
